testdata/fixtures/audit/positive/debug_mode_node_env_js.js
process.env.NODE_ENV = "development";

const app = require("./app");
app.listen(3000);
