testdata/fixtures/audit/negative/debug_mode_neg_node_env_prod_js.js
process.env.NODE_ENV = "production";

const app = require("./app");
app.listen(3000);
